layout bugs solved

--- a/src/index.css
+++ b/src/index.css
@@ -307,7 +307,7 @@
   .stacia-grid-2 {
     display: grid;
     gap: 2rem;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
   }
 
   .stacia-grid-3 {
